--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,24 @@ footer {
 	display: none;
 	font-family: 'Courier New', Courier, monospace;
 }
+
+/* linktree */
+.links-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 2%;
+	width: 50%;
+	/*height: 50%;*/
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -25% 0 0 -25%;
+}
+
+.links-container a {
+	text-decoration: none;
+	color: black;
+	target: self;
+}
