--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	height: 100vh; /*means the height of this element is equal to 100% of the viewport height*/
+	height: 100vh;
 	width: 100%;
 }
 
@@ -110,27 +110,38 @@ footer {
 	margin: 2% 1%;
 }
 
-.qa {
+.tut {
+	width: 100%;
 	margin-bottom: 3%;
+	text-align: center;
 }
 
-.show-answer {
+.show {
 	background-color: white;
 	padding: 1px 5px;
 	border: 1px solid grey;
 }
 
-.show-answer:hover {
-	color: darkgreen;
+.show:hover {
+	cursor: pointer;
 }
 
-.question {
-	text-decoration: underline;
+.title {
+	border: 1px solid black;
+	padding: 1%;
 }
 
-.answer {
+.content {
 	display: none;
+	border: 1px solid black;
+	padding: 10%;
 	font-family: 'Courier New', Courier, monospace;
+	text-align: right;
+}
+
+iframe {
+	width: 100%;
+	height: 480px;
 }
 
 /* linktree */
